--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build-webgl.loader.js";
+      var loaderUrl = buildUrl + "/Fps_Reflex_Game_v03.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build-webgl.data.gz",
-        frameworkUrl: buildUrl + "/build-webgl.framework.js.gz",
-        codeUrl: buildUrl + "/build-webgl.wasm.gz",
+        dataUrl: buildUrl + "/Fps_Reflex_Game_v03.data",
+        frameworkUrl: buildUrl + "/Fps_Reflex_Game_v03.framework.js",
+        codeUrl: buildUrl + "/Fps_Reflex_Game_v03.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Yağız Ayer",
         productName: "Fps Reflex Game",
